@@ -4,11 +4,11 @@ import com.vaadin.flow.component.charts.model.DataSeries;
 import com.vaadin.flow.component.charts.model.DataSeriesItem;
 import com.vaadin.flow.component.charts.model.style.SolidColor;
 import de.olech2412.adapter.dbadapter.model.stop.Stop;
-import de.olech2412.adapter.dbadapter.model.trip.Trip;
 import de.whosfritz.railinsights.data.dto.StopDto;
 import de.whosfritz.railinsights.data.repositories.stop_repositories.StopRepository;
 import de.whosfritz.railinsights.data.repositories.trip_repositories.TripsRepository;
 import de.whosfritz.railinsights.ui.color_scheme.ColorScheme;
+import de.whosfritz.railinsights.utils.PercentageUtil;
 import jakarta.transaction.Transactional;
 import lombok.Getter;
 import lombok.Setter;
@@ -20,7 +20,7 @@ import org.springframework.scheduling.annotation.EnableScheduling;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
-import java.text.DecimalFormat;
+import java.sql.Date;
 import java.time.LocalDate;
 import java.time.ZoneId;
 import java.util.ArrayList;
@@ -39,7 +39,7 @@ public class DataProviderService {
 
     DataProviderServiceState state = DataProviderServiceState.PENDING;
 
-    List<Stop> allStops = new ArrayList<>();
+    List<Stop> longDistanceStops = new ArrayList<>();
 
     Double stopsPercentageOnTime;
 
@@ -65,6 +65,7 @@ public class DataProviderService {
 
     @Autowired
     private TripsRepository tripsRepository;
+
     @Autowired
     private StopRepository stopRepository;
 
@@ -74,104 +75,37 @@ public class DataProviderService {
     /**
      * Run the data calculation every 20 minutes.
      */
-    @Scheduled(cron = "0 0/20 * * * ?")
+    @Scheduled(cron = "0 0/20 * * * ?") // every 20 minutes
     @Async
     @Transactional
     public void calculateData() {
         state = DataProviderServiceState.PENDING; // Set the state to pending
         log.info("Data calculation started...");
-        allStops = stopRepository.findAll();
-        List<Trip> allTrips = tripsRepository.findAll();
+        longDistanceStops = stopRepository.findByProducts_National(true);
+        totalStops = (int) stopRepository.count();
+        totalTrips = (int) tripsRepository.count();
 
-        DecimalFormat df = new DecimalFormat("#.##");
-        df.setGroupingUsed(false);
-
-        double percentageCancelled = ((double) allTrips.stream().filter(trip -> {
-            if (trip.getCancelled() != null) {
-                return trip.getCancelled();
-            }
-            return false;
-        }).count() / allTrips.size());
-
-        stopsPercentageCancelled = (Math.round(percentageCancelled * 100.0) / 100.0) * 100;
-        String formatted = df.format(stopsPercentageCancelled);
-        stopsPercentageCancelled = Double.parseDouble(formatted);
-
-        double percentageDelayed = ((double) allTrips.stream().filter(trip -> {
-            if (trip.getCancelled() == null || !trip.getCancelled()) {
-                if (trip.getDelay() != null) {
-                    return trip.getDelay() >= 360;
-                }
-            }
-            return false;
-        }).count() / allTrips.size());
-
-        stopsPercentageDelayed = (Math.round(percentageDelayed * 100.0) / 100.0) * 100;
-        formatted = df.format(stopsPercentageDelayed);
-        stopsPercentageDelayed = Double.parseDouble(formatted);
-
-        double percentageOnTime = (1 - percentageCancelled - percentageDelayed);
-
-        stopsPercentageOnTime = (Math.round(percentageOnTime * 100.0) / 100.0) * 100;
-        formatted = df.format(stopsPercentageOnTime);
-        stopsPercentageOnTime = Double.parseDouble(formatted);
-
-        stopsPercentageDelayedMoreThan6min = stopsPercentageDelayed;
-
-        double percentageDelayedMoreThan15min = ((double) allTrips.stream().filter(trip -> {
-            if (trip.getCancelled() == null || !trip.getCancelled()) {
-                if (trip.getDelay() != null) {
-                    return trip.getDelay() >= 900;
-                }
-            }
-            return false;
-        }).count() / allTrips.size());
-
-        stopsPercentageDelayedMoreThan15min = (Math.round(percentageDelayedMoreThan15min * 100.0) / 100.0) * 100;
-        formatted = df.format(stopsPercentageDelayedMoreThan15min);
-        stopsPercentageDelayedMoreThan15min = Double.parseDouble(formatted);
-
-        double percentageDelayedMoreThan60min = ((double) allTrips.stream().filter(trip -> {
-            if (trip.getCancelled() == null || !trip.getCancelled()) {
-                if (trip.getDelay() != null) {
-                    return trip.getDelay() >= 3600;
-                }
-            }
-            return false;
-        }).count());
-        double stopsPercentageDelayedMoreThan60mi = percentageDelayedMoreThan60min / allTrips.size();
-        stopsPercentageDelayedMoreThan60min = Math.round(stopsPercentageDelayedMoreThan60mi * 1000.0) / 1000.0 * 100;
-
-        generateHomeViewStatistics(allTrips);
-
-        totalTrips = allTrips.size();
-        totalStops = allStops.size();
-        totalTripsToday = (int) allTrips.stream().filter(trip -> trip.getCreatedAt().toLocalDate().equals(LocalDate.now())).count();
-        nationalStops = (int) allStops.stream().filter(stop -> stop.getProducts().isNational()).count();
-
-        log.info("Data calculation finished...");
-        state = DataProviderServiceState.READY; // Set the state to ready
-    }
-
-    private void generateHomeViewStatistics(List<Trip> allTrips) {
-        // HashMap zur Speicherung der Summe der Trips pro Tag
+        List<Object[]> tripsByDate = tripsRepository.countTripsByDate();
         Map<LocalDate, Integer> dailyTripCounts = new HashMap<>();
 
-        // Iteration durch alle Trips
-        for (Trip trip : allTrips) {
-            LocalDate tripDate;
-            // Wenn trip.getWhen() vorhanden ist, verwenden wir dieses Datum, ansonsten trip.getPlannedWhen() oder trip.getCreatedAt()
-            if (trip.getWhen() != null) {
-                tripDate = trip.getWhen().toLocalDate();
-            } else if (trip.getPlannedWhen() != null) {
-                tripDate = trip.getPlannedWhen().toLocalDate();
-            } else {
-                tripDate = trip.getCreatedAt().toLocalDate();
-            }
-
-            // Aktuellen Wert für den Tag holen und um 1 erhöhen
-            dailyTripCounts.put(tripDate, dailyTripCounts.getOrDefault(tripDate, 0) + 1);
+        for (Object[] trip : tripsByDate) {
+            Date sqlDate = (Date) trip[0];
+            LocalDate tripDate = sqlDate.toLocalDate();
+            int tripCount = ((Number) trip[1]).intValue();
+            dailyTripCounts.put(tripDate, tripCount);
         }
+        // order the map by localDate
+        dailyTripCounts = dailyTripCounts.entrySet().stream()
+                .sorted(Map.Entry.comparingByKey())
+                .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (e1, e2) -> e1, HashMap::new));
+
+        int countAllByCancelled = tripsRepository.countAllByCancelled(true);
+        int countAllByDelayIsGreaterThanEqual = tripsRepository.countAllByDelayIsGreaterThanEqual(360);
+        int countOnTime = totalTrips - countAllByCancelled - countAllByDelayIsGreaterThanEqual;
+
+        stopsPercentageOnTime = PercentageUtil.convertToTwoDecimalPlaces((double) countOnTime / totalTrips * 100);
+        stopsPercentageDelayed = PercentageUtil.convertToTwoDecimalPlaces((double) countAllByDelayIsGreaterThanEqual / totalTrips * 100);
+        stopsPercentageCancelled = PercentageUtil.convertToTwoDecimalPlaces((double) countAllByCancelled / totalTrips * 100);
 
         DataSeries dataSeries = new DataSeries();
         dataSeries.setName("Stopps");
@@ -181,6 +115,12 @@ public class DataProviderService {
             dataSeries.add(dataSeriesItem);
         }
         stoppsOverTimeDataSeries = dataSeries;
+
+        totalTripsToday = dailyTripCounts.getOrDefault(LocalDate.now(), 0);
+        nationalStops = longDistanceStops.size();
+
+        log.info("Data calculation finished...");
+        state = DataProviderServiceState.READY; // Set the state to ready
     }
 
     /**
@@ -189,15 +129,13 @@ public class DataProviderService {
      * @return the converted stopDTOs list
      */
     public List<StopDto> getAllNationalStopsConvertedToDto() {
-        return allStops.parallelStream()
-                .filter(stop -> stop.getProducts().isNational())
+        return longDistanceStops.parallelStream()
                 .map(stop -> new StopDto(
                         stop.getStopId().toString(),
                         stop.getName(),
                         stop.getLocation().getLatitude(),
                         stop.getLocation().getLongitude(),
-                        stop.getStation()))
-                .collect(Collectors.toList());
+                        stop.getStation())).toList();
     }
 
 }
